# PocketPuzzles

./: .gitignore  CMakeLists.txt  ChangeLog.md  DOWNLOAD.md  Dockerfile  HISTORY-REWRITE.md  LICENSE  Makefile  README.md  ToDo.md  makeinstructions.pl  pocketpuzzles.c  pocketpuzzles.h  puzzles.c
dev/: Makefile  README.md  gtk.c
frontend/: chooser.c  common.c  game.c  gamestate.c  main.c  param.c  state.c
games/: abcd.c  ascent.c  binary.c  blackbox.c  boats.c  bricks.c  bridges.c  clusters.c  creek.c  crossnum.c  cube.c  dominosa.c  fifteen.c  filling.c  flip.c  flood.c  flow.c  galaxies.c  group.c  guess.c  inertia.c  keen.c  lightup.c  loopy.c  magnets.c  map.c  mathrax.c  mines.c  mosaic.c  net.c  palisade.c  pattern.c  pearl.c  pegs.c  range.c  rect.c  rome.c  salad.c  samegame.c  signpost.c  (+16 more)
games/deactivated/: group.c  map.c  netslide.c  samegame.c  slide.c  sokoban.c
include/: chooser.h  common.h  game.h  grid.h  latin.h  loopgen.h  pocketpuzzles.h  puzzles.h  tree234.h
include/frontend/: chooser.h  common.h  game.h  gamelist.h  gamestate.h  main.h  param.h  state.h
release/: README.md  SGTPuzzles.app
release/nightly/: SGTPuzzles.app
release/old/0.5-beta/: SGTPuzzles.app
release/old/0.6.0/: SGTPuzzles.app
release/old/0.7.0/: SGTPuzzles.app
release/old/0.7.1/: SGTPuzzles.app
release/old/0.7.2/: SGTPuzzles.app
release/old/0.7.4/: SGTPuzzles.app
release/previous/: SGTPuzzles.app
release/stable/: SGTPuzzles.app
screenshots/: screenshots.md
utils/: divvy.c  draw-poly.c  drawing.c  findloop.c  grid.c  hat.c  latin.c  loopgen.c  malloc.c  matching.c  midend.c  misc.c  printing.c  random.c  tree234.c
